# LSPosed_mod

./: .gitmodules
.github/workflows/: core.yml
core/: build.gradle.kts
core/src/main/jni/: CMakeLists.txt
core/src/main/jni/include/: elf_util.h  xz_decompress.hpp
core/src/main/jni/src/: elf_util.cpp  xz_decompress.cpp
magisk-loader/src/main/java/org/lsposed/lspd/util/: ParasiticManagerHooker.java
